Fix minor css issues
- never show scrollbar of the page
- excess bar width is fixed

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -2,6 +2,7 @@
 html, body {
 	height: 100%;
 	margin: 0;
+	overflow: hidden;
 	font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
 }
 
